Fix transaction subcategory HTMX journey form

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -30,5 +30,7 @@
     <main class="mx-auto max-w-6xl px-4 py-6">
       {% block content %}{% endblock %}
     </main>
-  </body>
+  
+  <script src="https://unpkg.com/htmx.org@1.9.12"></script>
+</body>
 </html>
